# AGP-Group-Project

./: .gitignore  .gitmodules  AGP-Group-Project.sln  CMakeLists.txt  README.md
AGP-Group-Project/: AGP-Group-Project.vcxproj  AGP-Group-Project.vcxproj.filters  AbstractFrameBuffer.cpp  AbstractFrameBuffer.h  AutoRotator.cpp  AutoRotator.h  Bounds.cpp  Bounds.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  ComponentHeaders.h  ComponentManager.cpp  ComponentManager.h  CubicDepthBuffer.cpp  CubicDepthBuffer.h  DebugDraw.cpp  DebugDraw.h  DepthBuffer.cpp  DepthBuffer.h  Engine.cpp  Engine.h  FileLoader.cpp  FileLoader.h  FrameBuffer.cpp  FrameBuffer.h  Frustum.cpp  Frustum.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  Graphics.cpp  Graphics.h  HDRBuffer.cpp  (+49 more)
AGP-Group-Project/Shaders/: AllInOne.frag  AllInOne.vert  Blend.frag  BrightnessLimit.frag  BrightnessLimit.vert  DepthBuffer.frag  DepthBuffer.vert  GBuf.frag  GBuf.vert  GaussianBlur.frag  HDR.frag  HDR.vert  Particles.frag  Particles.vert  PointDepthBuffer.frag  PointDepthBuffer.vert  StaticWave.frag  Swirl.frag  basic.frag  basic.vert  gbufshader.vert  phong-tex.frag  phong-tex.vert  textured.frag  textured.vert
Assets/OBJModels/: wall.mtl
Assets/Shaders/: AllInOne.vert  BrightnessLimit.frag  GaussianBlur.frag  GaussianBlur.vert  Particles.vert  PointDepthBuffer.geom  StaticWave.frag  StaticWave.vert  Swirl.frag  Swirl.vert  phong.vert
include/: Bounds.h  Collision.h  CubicDepthBuffer.h  DebugDraw.h  Engine.h  Game.h  GameObjectData.h  GameObjectManager.h  HUD.h  Input.h  Light.h  Lights.h  Material.h  Mesh.h  MeshRenderer.h  ParticleEmiitter.h  PhysicsSystem.h  RenderingSystem.h  ScriptManagementSystem.h  Shader.h  Transform.h  TypeConverter.h  TypeInfo.h  gl_error.hpp
src/: AbstractFrameBuffer.cpp  AutoRotator.cpp  Bounds.cpp  Camera.cpp  Collider.cpp  DebugDraw.cpp  Engine.cpp  FileLoader.cpp  Frustum.cpp  Game.cpp  Graphics.cpp  Input.cpp  Light.cpp  Material.cpp  ParticleEmiitter.cpp  RenderingSystem.cpp  RigidBody.cpp  ScriptManagementSystem.cpp  Shader.cpp  Timer.cpp  Transform.cpp
